Titelseite und Grafiken fuer Wasserfall Modell

--- a/tex/realisierung.tex
+++ b/tex/realisierung.tex
@@ -5,11 +5,16 @@ Komponenten angefertigt. Hiermit wurde die Arbeit in mehrere Schritte
 und leicht abzugrenzende Komponenten unterteilt. Das Projekt ließ sich
 damit in Meilensteine aufteilen, um strukturiert an das Projekt
 herangehen zu können. Als Vorgehensweise wurde das erweiterte
-Wasserfall-Modell gewählt. Aufgrund der knappen Zeitanforderungen
-bietet ein Wasserfall Ansatz einen direkten, klaren Pfad vom Beginn zum
-Ende des Projektes. Im erweiterten Wasserfall-Modell erhält man, durch die
-Möglichkeit Rückschritte zu machen, die nötige Flexibilität um auf
-Feedback einzugehen und Dinge ausprobieren zu können.
+Wasserfall-Modell gewählt\ref{fig:wasserfall_modell}.
+\begin{figure}[h]
+\includegraphics[scale=0.5]{img/wasserfall_modell.png}
+\caption{Erweitertes Wasserfallmodell\label{fig:wasserfall_modell}}
+\end{figure}
+Aufgrund der knappen Zeitanforderungen bietet ein solcher Ansatz
+einen direkten, klaren Pfad vom Beginn zum Ende des Projektes. Im
+erweiterten Wasserfall-Modell erhält man, durch die Möglichkeit
+Rückschritte zu machen, die nötige Flexibilität um auf Feedback
+einzugehen und Dinge ausprobieren zu können.
 \subsection{Analyse \& Konzeption}
 Bei der Analyse der Anforderungen fallen die Realtime Aspekte auf. Sie
 sollen mithilfe von Websocketkommunikation und Push-Based-Updates vom
