--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,2 +1,39 @@
-\title{Entwicklung einer mobilen Webanwendung zur Planung und Unterstützung von Open Spaces.}
-\author{Christoph Hegemann}
+\begin{titlepage}
+\begin{center}
+
+% Oberer Teil der Titelseite:
+\includegraphics[width=0.80\textwidth]{img/oc-logo.jpg}\\[1cm]
+
+\textsc{\LARGE Dokumentation der betrieblichen Projektarbeit}\\[1.5cm]
+
+\textsc{\Large Abschlussprüfung Sommer 2015 Fachinformatiker, Fachrichtung Anwendungsentwicklung}\\[0.5cm]
+
+% Title
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+\HRule \\[0.4cm]
+{ \huge \bfseries Entwicklung einer mobilen Webanwendung zur Planung und Unterstützung von Open Spaces}\\[0.4cm]
+\HRule \\[1.5cm]
+
+% Author and supervisor
+\begin{minipage}{0.3\textwidth}
+\begin{flushleft} \large
+\emph{Author:}\\
+\textsc{Christoph Hegemann}
+\end{flushleft}
+\end{minipage}
+\hfill
+\begin{minipage}{0.5\textwidth}
+\begin{flushright} \large
+\emph{Unternehmen:} \\
+\textsc{OPITZ CONSULTING Deutschland GmbH
+Kirchstraße 6
+51647 Gummersbach
+www.opitz-consulting.com}
+\end{flushright}
+\end{minipage}
+
+\vfill
+% Unterer Teil der Seite
+%{\large \today}
+\end{center}
+\end{titlepage}
