einige Kommentare von Norbert umgesetzt. Realisierung erweitert

--- a/tex/ausblick.tex
+++ b/tex/ausblick.tex
@@ -26,9 +26,9 @@ anzusprechen, jedoch setzen sich Typsicherheit und funktionale
 Konzepte im Browser immer mehr durch. So wird beispielsweise Microsoft's
 TypeScript die Sprache sein, in der das aktuell wichtigste MVC
 Framework AngularJS entwickelt wird\footnote{\url{http://t3n.de/news/angularjs-20-typescript-597814/}}.
-Facebooks ``typed Javascript'' ist \textbf{Flow} ein JavaScript
+Facebooks ``typed Javascript'' ist Flow\footnote{\url{http://flowtype.org/}} ein JavaScript
 Compiler, der JavaScript um ein Typsystem erweitert. Um diesen
-Entwicklungen frühzeitig, progressiv entgegen zu treten ist die
+Entwicklungen frühzeitig, proaktiv entgegen zu treten ist die
 Beschäftigung mit PureScript eine wertvolle Erfahrung für jeden
 Frontend-Entwickler.
 
