--- a/tex/ausgangssituation.tex
+++ b/tex/ausgangssituation.tex
@@ -8,18 +8,18 @@ Das Unternehmen ist seit seiner Gründung im Jahr 1990 auf derzeit etwa
 450 Mitarbeiter gewachsen. Die 9 Standorte setzen sich aus sieben
 Standorten in Deutschland, sowie zwei Standorten in Polen zusammen.
 \subsection{Projekthintergrund}
-Seit einigen Jahren werden bei Opitz regelmäßig Open Spaces durchgeführt.
-Ein Open Space ist eine Veranstaltung, bei der mehrere Personen
-zusammen kommen, Themen vorschlagen und diese in einer wie auch immer
-gearteten Weise bearbeiten, besprechen oder erlernen. Ein Open Space
-verteilt sich hierbei auf mehrere Räume und Timeslots, die zuvor
-festgelegt werden müssen. Die Themen werden von den Teilnehmern selbst
-angeboten und die Teilnehmer entscheiden mit ihrer Interessenbekundung
-an einem oder mehreren Themen, wie sich das Programm gestaltet.
-(siehe auch:\footnote{\url{http://en.wikipedia.org/wiki/Open_Space_Technology}})
+Seit einigen Jahren werden bei OPITZ-CONSULTING regelmäßig Open Spaces
+durchgeführt. Ein Open Space ist eine Veranstaltung, bei der mehrere
+Personen zusammen kommen, Themen vorschlagen und diese in einer wie
+auch immer gearteten Weise bearbeiten, besprechen oder erlernen. Ein
+Open Space verteilt sich hierbei auf mehrere Räume und Timeslots, die
+zuvor festgelegt werden müssen. Die Themen werden von den Teilnehmern
+selbst angeboten und die Teilnehmer entscheiden mit ihrer
+Interessenbekundung an einem oder mehreren Themen, wie sich das
+Programm gestaltet. (siehe auch:\footnote{\url{http://en.wikipedia.org/wiki/Open_Space_Technology}})
 Falls die Teilnehmer nach Ablauf der Zeit eines Themas weiteres
-Interesse anmelden kann das Thema ad hoc verlängert und verlegt werden.
-
+Interesse anmelden kann das Thema ad hoc verlängert und verlegt
+werden.
 \noindent Derzeit verläuft die Planung dieser Open Spaces direkt auf
 der Veranstaltung mithilfe von Whiteboards oder Flipcharts. Im
 Nachhinein wird dann zumeist in einem \gls{CMS} über die Veranstaltungen
@@ -33,3 +33,8 @@ Maß an Vernetzung unverzichtbar. Das dokumentieren der parallelen und
 verteilten Vorgänge ist aus der Sicht einer Person aufwendig und das
 Ergebnis lückenhaft. Eine mobile Webanwendung kann und soll hier
 Abhilfe schaffen.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Doku"
+%%% End:
