--- a/tex/glossar.tex
+++ b/tex/glossar.tex
@@ -65,6 +65,35 @@
     erneut abzuspielen oder die Vergangenheit zu verändern
   }
 }
+\newglossaryentry{ssh}
+{
+  name=Secure Shell (ssh),
+  description={bezeichnet sowohl ein Netzwerkprotokoll als auch entsprechende Programme, mit deren Hilfe man auf eine sichere Art und Weise eine verschlüsselte Netzwerkverbindung mit einem entfernten Gerät herstellen kann
+  }
+}
+\newglossaryentry{Reactive Programming}
+{
+  name=Reactive Programming,
+  description={beschreibt ein Paradigma, welches sich um Datenflüsse und das Propagieren von Änderungen durch diese dreht.
+  Es hat in neuester Zeit an Beliebtheit gewonnen und wird als wichtiger Ansatz gesehen um robuste, skalierbare Systeme zu entwickeln\\
+  \url{http://www.reactivemanifesto.org/}
+  }
+}
+\newglossaryentry{React}
+{
+  name=React,
+  description={ist ein von Facebook entwickeltes UI-Framework das ein funktionalen Ansatz für das Erstellen von Oberflächen empfiehlt\\
+  \url{http://facebook.github.io/react/}
+  }
+}
+\newglossaryentry{Yesod Framework}
+{
+  name=Yesod Framework,
+  description={ist ein Open-Source Web-Framework, welches in Haskell geschrieben ist und es sich zum Ziel macht Haskells Typsystem zu nutzen,
+  um Laufzeitfehler in Compilezeitfehler umzuwandeln.\\
+  \url{http://www.yesodweb.com/}
+  }
+}
 
 %%% Local Variables:
 %%% mode: plain-tex
