geht auf Stefans Aenderungsvorschlaege ein.

--- a/tex/ausblick.tex
+++ b/tex/ausblick.tex
@@ -24,13 +24,13 @@ funktionale Konzepte in einer realistischen Umgebung auszuprobieren.
 PureScript ist wahrscheinlich zu radikal um eine breite Nutzerbasis
 anzusprechen, jedoch setzen sich Typsicherheit und funktionale
 Konzepte im Browser immer mehr durch. So wird beispielsweise Microsoft's
-TypeScript die Sprache sein, in der das aktuell wichtigste MVC
-Framework AngularJS entwickelt wird\footnote{\url{http://t3n.de/news/angularjs-20-typescript-597814/}}.
-Facebooks ``typed Javascript'' ist Flow\footnote{\url{http://flowtype.org/}} ein JavaScript
-Compiler, der JavaScript um ein Typsystem erweitert. Um diesen
-Entwicklungen frühzeitig, proaktiv entgegen zu treten ist die
-Beschäftigung mit PureScript eine wertvolle Erfahrung für jeden
-Frontend-Entwickler.
+TypeScript die Sprache sein, in der das aktuell sehr weit verbreitete MVC
+Framework AngularJS in der nächsten Version entwickelt wird\footnote{\url{http://t3n.de/news/angularjs-20-typescript-597814/}}.
+Facebooks ``typed Javascript'' ist
+Flow\footnote{\url{http://flowtype.org/}} ein JavaScript Compiler, der
+JavaScript um ein Typsystem erweitert. Um diesen Entwicklungen
+frühzeitig, proaktiv entgegen zu treten ist die Beschäftigung mit
+PureScript eine wertvolle Erfahrung für jeden Frontend-Entwickler.
 
 %%% Local Variables:
 %%% mode: latex
