--- a/tex/glossar.tex
+++ b/tex/glossar.tex
@@ -94,6 +94,13 @@
   \url{http://www.yesodweb.com/}
   }
 }
+\newglossaryentry{PureScript}
+{
+  name=PureScript,
+  description={PureScript ist eine kleine stark getypte Programmiersprache die zu Javascript kompiliert wird.\\
+  \url{http://www.purescript.org/}
+  }
+}
 
 %%% Local Variables:
 %%% mode: plain-tex
