--- a/tex/projektplanung.tex
+++ b/tex/projektplanung.tex
@@ -10,8 +10,8 @@ die wichtigsten Punkte aufgelistet werden.
   Zeitplan vorzunehmen
 \item Fehlende Möglichkeit diese Änderungen in Echtzeit an die
   Teilnehmer weiter zu reichen
-\item Fehlende Möglichkeit für das Festhalten der durchgeführten
-  Diskussionen, Workshops, etc\ldots
+\item Fehlende Möglichkeit für das Festhalten der Ergebnisse der
+  durchgeführten Diskussionen, Workshops, etc\ldots
 \end{itemize}
 \subsection{SOLL-Konzept}
 Gewünscht ist eine Möglichkeit die zuvor gesammelten Themenvorschläge
@@ -21,7 +21,7 @@ lassen und die vorgenommenen Änderungen sollen alle Teilnehmer des
 Open Spaces erreichen. Als zusätzliche Anforderung soll die gewünschte
 Applikation in einem funktionalen Stil entwickelt werden um spätere
 Änderungswünsche leichter umsetzen zu können. Dieser Effekt soll sich
-durch das Vermeiden von Seiteneffekten, Modularisierung und das
+durch das Vermeiden von Seiteneffekten, sowie Modularisierung und das
 Programmieren mit Unveränderlichen Variablen einstellen.
 \subsection{Zielsetzung}
 Primärziel ist es eine Webapplikation zur Unterstützung von Open
@@ -29,10 +29,9 @@ Spaces zu entwickeln. Weitere Ziele sind eine mobile Lösung um den
 Zeitplan zu betrachten sowie die Tauglichkeit von funktionalen
 Techniken für die Webentwicklung zu evaluieren.
 \subsection{Infrastrukturelle Rahmenbedingungen}
-Für die Applikation wird ein Server im firmeninternen Netz zur
-Verfügung gestellt. Die Administration dieses Servers geschieht über
-\gls{ssh} aus dem firmeninternen Netz. Der Server wird zeitlich
-begrenzt für die Dauer des Open Spaces bereitgestellt.
+Für die Applikation wird ein Server zur Verfügung gestellt. Die
+Administration dieses Servers geschieht über \gls{ssh}. Der Server
+wird zeitlich begrenzt für die Dauer des Open Spaces bereitgestellt.
 \subsubsection{Entwicklungsumgebung}
 Entwickelt wurde auf einem Ubuntu 14.04 Linux System. Als
 Entwicklungsumgebung diente Emacs mit Plugins für den jeweiligen
@@ -66,7 +65,7 @@ ausgeführt werden.
 Das Projekt ist zwischen dem 25.01.2015 und dem 17.04.2015 zu
 realisieren und umfasst maximal 70 Arbeitsstunden. Am 17.03.2015
 findet wieder ein Open Space bei Opitz statt. Hier soll das Tool
-seinen ersten Einsatz haben und getestet werden.
+seinen ersten Produktiveinsatz haben.
 
 %%% Local Variables:
 %%% mode: latex
