adds screenshots. moar cleanup

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -13,7 +13,7 @@
 \usepackage{setspace}
 
 \usepackage{float}
-
+\usepackage{rotating}
 \usepackage{bigstrut}
 \usepackage{hyperref}
 \usepackage{booktabs}
