--- a/tex/anhang.tex
+++ b/tex/anhang.tex
@@ -36,17 +36,36 @@
 
 \section{Screenshots}
 \subsection{Desktop-Version}
-\begin{figure}[h]
-%\includegraphics[scale=0.3]{img/screenshot-desktop.png}
-\caption{Screenshot Desktop}
-\end{figure}
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[scale=0.5]{img/desktop_screenshot.png}
+    \caption{Screenshot Desktop}
+    %\label{fig:awesome_image}
+\end{sidewaysfigure}
 
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[scale=0.5]{img/neuer_block_screenshot.png}
+    \caption{Screenshot Neuer Block}
+    %\label{fig:awesome_image}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[scale=0.5]{img/neues_thema_screenshot.png}
+    \caption{Screenshot Neues Thema}
+    %\label{fig:awesome_image}
+\end{sidewaysfigure}
+\clearpage
 \subsection{Mobile-Version}
 \begin{figure}[h]
-%\includegraphics[scale=0.3]{img/screenshot-mobile.png}
-\caption{Screenshot Mobile}
+\includegraphics[scale=0.8]{img/mobile_view.png}
+\caption{Screenshot Mobile Ansicht}
 \end{figure}
-
+\begin{figure}[h]
+\includegraphics[scale=0.8]{img/mobile_inner_screenshot.png}
+\caption{Screenshot Mobile Detailansicht}
+\end{figure}
 \end{appendices}
 
 %%% Local Variables:
