--- a/tex/ausblick.tex
+++ b/tex/ausblick.tex
@@ -19,7 +19,7 @@ Performance Steigerungen und neue Möglichkeiten für die Verbesserung
 der Fehlertoleranz der Applikation bringen.
 
 \subsection{Nutzung als Referenzprojekt}
-Das entstandene Projekt kann als Spielwiese/Lernmaterial dienen, um
+Das entstandene Projekt kann als Grundlage dienen, um
 funktionale Konzepte in einer realistischen Umgebung auszuprobieren.
 PureScript ist wahrscheinlich zu radikal um eine breite Nutzerbasis
 anzusprechen, jedoch setzen sich Typsicherheit und funktionale
