--- a/tex/erklaerungen.tex
+++ b/tex/erklaerungen.tex
@@ -1,3 +1,4 @@
+\input{tex/signature}
 \section*{Erklärungen}
 \subsection*{Erklärung des Prüfungsteilnehmers}
 Ich versichere durch meine Unterschrift, dass ich das Projekt und die
@@ -8,12 +9,12 @@ wörtlich aus Veröffentlichungen entnommen habe, als solche kenntlich
 gemacht habe. Die Arbeit
 hat in dieser Form keiner anderen Prüfungsinstitution vorgelegen.
 \\[1.5cm]
-%\doublesignature{Ort, Datum}{Unterschrift des Prüfungsteilnehmers}
+\doublesignature{Ort, Datum}{Unterschrift des Prüfungsteilnehmers}
 \subsection*{Erklärung des Ausbildungsbetriebes}
 Wir versichern, dass das Projekt wie in der Dokumentation dargestellt,
 in unserem Unternehmen
 realisiert worden ist.\\[1.5cm]
-%\doublesignature{Ort, Datum}{Unterschrift des Ausbilders}
+\doublesignature{Ort, Datum}{Unterschrift des Ausbilders}
 \section*{Sperrvermerk}
 Die vorliegende Abschlussarbeit mit dem Titel ``Entwicklung einer
 mobilen Webanwendung zur Planung und Unterstützung von Open Spaces''
@@ -29,3 +30,8 @@ der Abschlussarbeit ist \- auch in Auszügen \- nicht gestattet.
 Eine Einsichtnahme der Arbeit durch Unbefugte bedarf einer
 ausdrücklichen Genehmigung des Verfassers und des Unternehmens OPITZ
 CONSULTING Deutschland GmbH.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Doku"
+%%% End:
