--- a/tex/fazit.tex
+++ b/tex/fazit.tex
@@ -14,7 +14,7 @@ auch von Kollegen beim Code Review war durchgängig positiv.
 
 \subsection{Community}
 Bei manchen Kollegen konnte ich auch Interesse für
-PureScript wecken und bin gespannt was für Projekte und
+PureScript wecken und bin gespannt, welche Projekte und
 Kollaborationen dadurch entstehen könnten. Da das PureScript-Projekt
 noch jung ist und die Maintainer hilfreich und freundlich sind, konnte
 ich mich auch ein wenig in die Open-Source Community einbringen und
