fügt Vergleich Soll-Ist für die Dauer hinzu

--- a/tex/realisierung.tex
+++ b/tex/realisierung.tex
@@ -97,7 +97,32 @@ dieser kleinen Bugs gestaltete sich als zu zeitaufwendig, und so wurden
 die unterstützten Browser auf Firefox und Chrome festgelegt.
 Die Mobile Version wurde sowohl auf Android als auch auf iOS ausgiebig
 getestet und funktioniert ohne Einschränkungen auf beiden Systemen.
-
+\subsection{Projektablauf}
+Die folgende Tabelle soll die Differenzen zwischen \textit{Soll} und \textit{Ist} in
+der Zeitplanung aufzeigen.
+\begin{table}[htb]
+\centering
+\begin{tabular}{l l r r r}
+\toprule
+   & Phase                & Soll & Ist & Diff. \\
+\midrule
+1. & Planung              & 2h  &  2h & $\pm0$ \\
+2. & Entwurf              & 5h  &  5h & $\pm0$ \\
+\midrule
+3.  & Implementierung     &     &     &        \\
+3.1 & Browser Frontend    & 15h & 17h & $  +2$ \\
+3.2 & Backend             & 20h & 15h & $  -5$ \\
+3.3 & Mobile Webapp       & 5h  &  8h & $  +3$ \\
+\midrule
+4. & Abschließender Test  &  5h &  5h & $\pm0$ \\
+5. & Übergabe             &  3h &  3h & $\pm0$ \\
+6. & Dokumentation        & 15h & 15h & $\pm0$ \\
+\cmidrule{3-5}
+$\Sigma$ & Summe          & 70h & 70h & $\pm0$ \\
+\bottomrule
+\end{tabular}
+\caption{Vergleich Aufwand -- Soll/Ist}
+\end{table}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Doku"
