--- a/tex/title.tex
+++ b/tex/title.tex
@@ -10,9 +10,9 @@
 
 % Title
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-\HRule \\[0.4cm]
+\HRule\\[0.4cm]
 { \huge \bfseries Entwicklung einer mobilen Webanwendung zur Planung und Unterstützung von Open Spaces}\\[0.4cm]
-\HRule \\[1.5cm]
+\HRule\\[1.5cm]
 
 % Author and supervisor
 \begin{minipage}{0.3\textwidth}
@@ -25,15 +25,20 @@
 \begin{minipage}{0.5\textwidth}
 \begin{flushright} \large
 \emph{Unternehmen:} \\
-\textsc{OPITZ CONSULTING Deutschland GmbH
-Kirchstraße 6
-51647 Gummersbach
-www.opitz-consulting.com}
+\textsc{OPITZ CONSULTING Deutschland GmbH}\\
+\textsc{Kirchstraße 6}\\
+\textsc{51647 Gummersbach}\\
+\url{www.opitz-consulting.com}
 \end{flushright}
 \end{minipage}
 
 \vfill
 % Unterer Teil der Seite
-%{\large \today}
+{\large \today}
 \end{center}
 \end{titlepage}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Doku"
+%%% End:
