--- a/Doku.tex
+++ b/Doku.tex
@@ -14,7 +14,7 @@
 \include{tex/erklaerungen}
 \tableofcontents
 \listoffigures
-%\listoftables
+\listoftables
 \clearpage
 \pagenumbering{arabic}
 \input{tex/ausgangssituation}
@@ -26,7 +26,7 @@
 \clearpage
 \printglossary[title=Glossar]%Glossar ausgeben
 \clearpage
-%\input{tex/anhang}
+\input{tex/anhang}
 \end{document}
 
 %%% Local Variables:
