--- a/tex/ausblick.tex
+++ b/tex/ausblick.tex
@@ -11,7 +11,7 @@ zu entwicklen.
 
 \subsection{Eventstore als Persistenzlayer}
 Die Anwendung hält sich streng an das \gls{Event Sourcing} Pattern. Es
-modeliert die Kommunikation zwischen den Systembestandteilen als Event
+modelliert die Kommunikation zwischen den Systembestandteilen als Event
 Streams. Für diese Art von Eventbasierter Kommunikation wurde eine spezielle
 Datenbank\footnote{\url{https://geteventstore.com/}} entwickelt die
 das Observieren dieser Eventstreams unterstützt. Dies könnte
@@ -27,10 +27,10 @@ Konzepte im Browser immer mehr durch. So wird beispielsweise Microsoft's
 TypeScript die Sprache sein, in der das aktuell sehr weit verbreitete MVC
 Framework AngularJS in der nächsten Version entwickelt wird\footnote{\url{http://t3n.de/news/angularjs-20-typescript-597814/}}.
 Facebooks ``typed Javascript'' ist
-Flow\footnote{\url{http://flowtype.org/}} ein JavaScript Compiler, der
+Flow\footnote{\url{http://flowtype.org/}}, ein JavaScript Compiler, der
 JavaScript um ein Typsystem erweitert. Um diesen Entwicklungen
-frühzeitig, proaktiv entgegen zu treten ist die Beschäftigung mit
-PureScript eine wertvolle Erfahrung für jeden Frontend-Entwickler.
+frühzeitig entgegen zu treten ist die Beschäftigung mit PureScript
+eine wertvolle Erfahrung für jeden Frontend-Entwickler.
 
 %%% Local Variables:
 %%% mode: latex
