--- a/tex/kosten-nutzen-betrachtung.tex
+++ b/tex/kosten-nutzen-betrachtung.tex
@@ -1,1 +1,39 @@
 \section{Kosten-Nutzen-Betrachtung}
+Die Gesamtprojektkosten, von \EUR{3.640,00} setzen sich wie folgt
+zusammen:
+\begin{table}[htb]
+\centering
+\begin{tabular}{l l r r r}
+\toprule
+Tätigkeit & Posten & Kosten/Std. & Zeit & Kosten \\
+\midrule
+Planung & Gehalt -- Project owner & \EUR{70,00}& 5,0h & \EUR{350,00}\\
+Umsetzung & Gehalt -- Auszubildender & \EUR{45,00}& 70,0h & \EUR{3150,00}\\
+Abnahme & Gehalt -- Project owner & \EUR{70,00}& 2,0h & \EUR{140,00}\\
+\cmidrule{5-5}
+&&&& \EUR{3640,00}\\
+\bottomrule
+\end{tabular}
+\caption{Aufwand Kosten}
+\end{table}
+
+\noindent Da die Planung und Abnahme seitens der Auszubildenden zum
+Projektumfang von 70 Stunden gehören, sind die Kosten in dem Posten
+Umsetzung zusammengefasst.
+\\
+Die Kosten für den Betrieb der entwickelten Software werden hier nicht
+berücksichtigt, da die Anwendung auf interner Serverarchitektur
+ausgeführt wurde.
+
+Für den Nutzen der Software lässt sich derzeit nur schwer ein Geldwert
+angeben. Er besteht in der verbesserten Qualität der Open Spaces und
+der Möglichkeit, das Projekt als Referenz heranzuziehen, um daraus
+neue Projekte zu akquirieren. Die Software kann zusätzlich eingesetzt
+werden um das moderne, agile und innovative Arbeitsumfeld von OPITZ
+Consulting zu demonstrieren und damit bei der Einstellung von neuen
+Mitarbeitern zu helfen.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Doku"
+%%% End:
