--- a/tex/title.tex
+++ b/tex/title.tex
@@ -12,10 +12,10 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \HRule\\[0.4cm]
 { \huge \bfseries Entwicklung einer mobilen Webanwendung zur Planung und Unterstützung von Open Spaces}\\[0.4cm]
-\HRule\\[1.5cm]
+\HRule\\[1.0cm]
 
 % Author and supervisor
-\begin{minipage}{0.3\textwidth}
+\begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
 \textsc{Christoph Hegemann}
@@ -28,7 +28,7 @@
 \textsc{OPITZ CONSULTING Deutschland GmbH}\\
 \textsc{Kirchstraße 6}\\
 \textsc{51647 Gummersbach}\\
-\url{www.opitz-consulting.com}
+%%\url{www.opitz-consulting.com}
 \end{flushright}
 \end{minipage}
 
