Holger's Anmerkungen eingepflegt

--- a/Doku.tex
+++ b/Doku.tex
@@ -20,7 +20,9 @@
 \input{tex/ausgangssituation}
 \input{tex/projektplanung}
 \input{tex/realisierung}
+\clearpage
 \input{tex/kosten-nutzen-betrachtung}
+\clearpage
 \input{tex/ausblick}
 \input{tex/fazit}
 \clearpage
