--- a/tex/realisierung.tex
+++ b/tex/realisierung.tex
@@ -6,7 +6,8 @@ Wasserfall-Modell gewählt. (Abbildung~\ref{fig:wasserfall_modell})
 \includegraphics[scale=0.5]{img/wasserfall_modell.png}
 \caption{Erweitertes Wasserfallmodell\label{fig:wasserfall_modell}}
 \end{figure}
-Aufgrund der knappen Zeitanforderungen bietet ein solcher Ansatz
+
+\noindent Aufgrund der knappen Zeitanforderungen bietet ein solcher Ansatz
 den Vorteil eines direkten, klaren Pfades vom Beginn zum Ende des
 Projektes. Im erweiterten Wasserfall-Modell erhält man, durch die
 Möglichkeit kleine Rückschritte zu machen, die nötige Flexibilität um
@@ -151,18 +152,18 @@ $\Sigma$ & Summe          & 70h & 70h & $\pm0$ \\
 \end{table}
 
 \noindent Die Zeitersparnis von 5 Stunden bei der Entwicklung des
-Backends rührt daher, das durch die syntaktische und semantische Nähe
+Backends kommt daher, dass durch die syntaktische und semantische Nähe
 von PureScript und Haskell einiger Code mit wenigen Änderungen vom
 Frontend übernommen werden konnte. Der Code der übernommen werden
 konnte musste jedoch erst am Frontend entstehen, weshalb hier über das
 erwartete Zeitbudget hinaus entwickelt werden musste.
 
-\noindent Dass für die Mobile Webapp 3 Stunden mehr als ursprünglich
+\noindent Dass für die Mobile Webapp drei Stunden mehr als ursprünglich
 geplant aufgewendet werden musste, lag an den Inkompatibilitäten der
 mobilen Browser untereinander. Hier mussten Änderungen gemacht und
 mühsam auf vielen Geräten getestet werden.
 
-Die Zeitplanung hat sich erfreulicherweise jedoch als akkurat
+\noindent  Die Zeitplanung hat sich erfreulicherweise jedoch als akkurat
 herausgestellt und so konnte das Projekt im gegebenen Zeitrahmen
 realisiert werden.
 
