--- a/tex/title.tex
+++ b/tex/title.tex
@@ -19,6 +19,7 @@
 \begin{flushleft} \large
 \emph{Author:}\\
 \textsc{Christoph Hegemann}
+\textsc{Prüflingsnr: 70020}
 \end{flushleft}
 \end{minipage}
 \hfill
